// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should match the snapshot 1`] = `
<RadioButton__StyledContainer>
  <RadioButton__StyledLabel />
  <RadioButton__StyledInput
    type="radio"
  />
  <RadioButton__StyledSpan />
</RadioButton__StyledContainer>
`;

exports[`RadioButton should match the snapshot when checked 1`] = `
<RadioButton__StyledContainer>
  <RadioButton__StyledLabel />
  <RadioButton__StyledInput
    checked={true}
    type="radio"
  />
  <RadioButton__StyledSpan
    checked={true}
  />
</RadioButton__StyledContainer>
`;

exports[`RadioButton should match the snapshot with label 1`] = `
<RadioButton__StyledContainer>
  <RadioButton__StyledLabel>
    Mock
  </RadioButton__StyledLabel>
  <RadioButton__StyledInput
    type="radio"
  />
  <RadioButton__StyledSpan />
</RadioButton__StyledContainer>
`;
